--- a/hosts.yml
+++ b/hosts.yml
@@ -1,6 +1,5 @@
 all:
-  vars:
-    ansible_python_interpreter: /usr/bin/python3
+  vars_files:
+    - /var/lib/jenkins/secrets/secret
   hosts:
     192.168.1.55:
-
